added btns and new form. still work in progress. #12

--- a/customprompts/mzta-custom-prompts.css
+++ b/customprompts/mzta-custom-prompts.css
@@ -45,3 +45,11 @@ table td {
 table td.properties{
     white-space: nowrap;
 }
+
+.hiddendata{
+    display: none;
+}
+
+#formNew{
+    display: none;
+}
