--- a/customprompts/mzta-custom-prompts.css
+++ b/customprompts/mzta-custom-prompts.css
@@ -1,3 +1,22 @@
+@media (prefers-color-scheme: light) {
+    table th {
+        background-color: #ffffff;
+    }
+
+    #command_palette{
+        background-color: #ffffff; 
+    }
+
+    table tr:nth-child(even) {
+        background-color: #e9e9e9;
+    }
+
+    table tr:nth-child(odd) {
+        background-color: #f3f3f3;
+    }
+}
+
+
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #1C1B22;
@@ -18,6 +37,10 @@
         background-color: #4c4e58;
         border: 1px solid rgb(251, 251, 254);
         color: rgb(194, 194, 194);
+    }
+
+    #command_palette{
+        background-color: inherit; 
     }
 
     table tr:nth-child(even) {
@@ -42,7 +65,6 @@ thead {
     padding-top: 1px;
     height: 26px;
     width: 100%;
-    background-color: inherit;
 }
 
 #btnNew{
