--- a/customprompts/mzta-custom-prompts.css
+++ b/customprompts/mzta-custom-prompts.css
@@ -94,6 +94,14 @@ table td {
     padding: 8px;
 }
 
+table td.w19{
+    width: 19vw;
+}
+
+table td.w25{
+    width: 25vw;
+}
+
 table.prompts_list td.properties{
     white-space: nowrap;
 }
@@ -109,7 +117,7 @@ table.prompts_list td.properties{
 }
 
 .text_output{
-    width: 100%;
+    width: 98%;
     height: 9em;
 }
 
