import export buttons added. see #65

--- a/customprompts/mzta-custom-prompts.css
+++ b/customprompts/mzta-custom-prompts.css
@@ -170,3 +170,9 @@ table .sort.desc {
 #txtIdNew, .id_output{
     text-transform: lowercase;
 }
+
+#import_export{
+    position: absolute;
+    right:10px;
+    top:10px;
+}
