--- a/options/mzta-options.css
+++ b/options/mzta-options.css
@@ -1,16 +1,3 @@
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: rgb(35, 34, 43);
-        color: rgb(251, 251, 254);
-    }
-    
-    a:link { color: #409EFF; }   
-    a:visited { color: #409EFF; }  
-    a:hover { color: #66B1FF; }   
-    a:active { color: #66B1FF; }
-    
-}
-
 div#miczDescription{
     padding:0px 15px 0px 15px;
     font-size: 13px;
@@ -99,4 +86,32 @@ div#miczTranslate{
     font-size: 14px;
     font-weight: bold;
     margin-bottom: 1em;
+}
+
+.conntype_chatgpt_api, .conntype_chatgpt_api2{
+    background-color: rgb(185, 220, 252);
+}
+
+.conntype_chatgpt_web, .conntype_chatgpt_web2{
+    background-color: rgb(205, 255, 205);
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(35, 34, 43);
+        color: rgb(251, 251, 254);
+    }
+    
+    a:link { color: #409EFF; }   
+    a:visited { color: #409EFF; }  
+    a:hover { color: #66B1FF; }   
+    a:active { color: #66B1FF; }
+    
+    .conntype_chatgpt_api, .conntype_chatgpt_api2{
+        background-color: rgb(0, 0, 58);
+    }
+
+    .conntype_chatgpt_web,.conntype_chatgpt_web2{
+        background-color: rgb(0, 39, 0);
+    }
 }
