added a loading info when fetching models

--- a/options/mzta-options.css
+++ b/options/mzta-options.css
@@ -102,6 +102,11 @@ div#miczTranslate{
 }
 */
 
+#model_fetch_loading{
+    display: none;
+    font-style: italic;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background-color: rgb(35, 34, 43);
