--- a/popup/mzta-popup.css
+++ b/popup/mzta-popup.css
@@ -11,11 +11,12 @@ body {
     width: fit-content;
     height: fit-content;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
     width: 10em;
-    max-height: 12em;
+    max-height: 13em;
     min-height: 1em;
     padding: 0;
   }
@@ -29,9 +30,13 @@ body {
     z-index: 1001;
     font-size: 13px;
   }
+
+  ._spacer_div{
+      width: 100%;
+      height: 2.1em;
+  }
   
   #mzta_autocomplete-items {
-    margin-top: 1.5em;
     border: none;
     z-index: 1000;
     background-color: #FAFAFA;
