--- a/popup/mzta-popup.css
+++ b/popup/mzta-popup.css
@@ -1,22 +1,21 @@
 body {
     background-color: #FAFAFA;
     font-size: 14px;
-    padding: 0;
+    padding: 1px;
     margin:3px;
 }
 
 #mzta_search_banner{
     background-color: #FAFAFA;
     color:black;
-    width: fit-content;
-    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 10em;
-    max-height: 13em;
+    height: fit-content;
+    width: 15em;
+    max-height: 23em;
     min-height: 1em;
     padding: 0;
   }
@@ -33,16 +32,17 @@ body {
 
   #_spacer_div{
       width: 100%;
-      height: 2.1em;
+      height: 2.2em;
   }
   
   #mzta_autocomplete-items {
     border: none;
     z-index: 1000;
     background-color: #FAFAFA;
-    width: 10em;
+    width: 100%;
     overflow-y: auto;
     padding: 0;
+    overflow-x: hidden;
   }
   
   .mzta_autocomplete-item {
