--- a/popup/mzta-popup.css
+++ b/popup/mzta-popup.css
@@ -1,5 +1,6 @@
 body {
     background-color: #FAFAFA;
+    color:black;
     font-size: 14px;
     padding: 1px;
     margin:3px;
@@ -63,6 +64,7 @@ body {
 
     body{   
         background-color: #2c2c2c;
+        color: #ffffff;
     }
 
     #mzta_search_input {
