clicking on chatgpt_web_model allowed options now sets the text field

--- a/options/mzta-options.css
+++ b/options/mzta-options.css
@@ -166,6 +166,10 @@ input.option-input[type="text"]{
     border-radius: 4px;
 }
 
+.conntype_chatgpt_web_option{
+    cursor: pointer;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background-color: rgb(35, 34, 43);
