added a button in the options page to open the tag info page. see #183

--- a/options/mzta-options.css
+++ b/options/mzta-options.css
@@ -170,6 +170,10 @@ input.option-input[type="text"]{
     cursor: pointer;
 }
 
+.btn_small{
+    font-size: 0.8em;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background-color: rgb(35, 34, 43);
