--- a/popup/mzta-popup.css
+++ b/popup/mzta-popup.css
@@ -62,6 +62,10 @@ body {
   .mzta_autocomplete-item-active {
       background-color: #e9e9e9;
   }
+
+  .prompt_add_tags{
+    background-color: #cfe9ff;
+  }
   
   
   @media (prefers-color-scheme: dark) {
@@ -96,4 +100,8 @@ body {
     .mzta_autocomplete-item-active {
         background-color: #444444;
     }
+
+    .prompt_add_tags{
+        background-color: #353542;
+      }
   }
