added a reset button for the aggtags prompt. see #183

--- a/pages/addtags/mzta-add-tags.css
+++ b/pages/addtags/mzta-add-tags.css
@@ -23,7 +23,8 @@
 
 .btn_div{
     width: 100%;
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
 }
 
 #addtags_info_limit_num{
