--- a/options/mzta-options.css
+++ b/options/mzta-options.css
@@ -118,6 +118,11 @@ tr.conntype_google_gemini_api, tr.conntype_google_gemini_api2{
     font-style: italic;
 }
 
+#google_gemini_system_instruction{
+    width: -moz-available;
+    height: 10em;
+}
+
 .api_key-container {
     position: relative;
     width: 100%;
