--- a/popup/mzta-popup.css
+++ b/popup/mzta-popup.css
@@ -64,7 +64,7 @@ body {
       background-color: #e9e9e9;
   }
 
-  .prompt_add_tags, .prompt_get_calendar_event{
+  .special_prompt{
     background-color: #cfe9ff;
   }
   
@@ -102,7 +102,7 @@ body {
         background-color: #444444;
     }
 
-    .prompt_add_tags, .prompt_get_calendar_event{
+    .special_prompt{
         background-color: #353542;
       }
   }
