--- a/pages/addtags/mzta-add-tags.css
+++ b/pages/addtags/mzta-add-tags.css
@@ -32,7 +32,10 @@
     margin-bottom: 10px;
     margin-top: 10px;
 }
-    
+
+.add_tags_auto{
+    background-color: #e9ffdf;
+}
 
 .btn_div{
     width: 100%;
@@ -141,5 +144,9 @@ table#miczPrefs  tr:last-child td {
     
     .autocomplete-list li.active {
         background-color: #4c4e58;
+    }
+
+    .add_tags_auto{
+        background-color: #415c35;
     }
 }
