Add ChatGPT Web project and custom GPT options with validation. see #277 and #168.

--- a/options/mzta-options.css
+++ b/options/mzta-options.css
@@ -74,6 +74,10 @@ span.dims_label{
     display: inline-block;
 }
 
+span.opt_title{
+    font-weight: bold;
+}
+
 #btn_custom_prompts{
     text-align: center;
     width: 100%;
