--- a/pages/customprompts/mzta-custom-prompts.css
+++ b/pages/customprompts/mzta-custom-prompts.css
@@ -227,6 +227,15 @@ table .sort.desc {
     cursor: pointer;
 }
 
+#chatgpt_web_additional_info_toggle:hover{
+    background-color: rgb(255, 189, 153);
+    text-decoration: underline;
+}
+
+#chatgpt_web_additional_info_toggle td{
+    text-align: center;
+}
+
 #chatgpt_web_additional_info td{
     vertical-align: top;
 }
